# cognitive_robot_abstract_machine

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/docker/: Dockerfile  setup_ros_workspace.sh
.github/workflows/: build_all_docs.yml  ci.yml  ci_reusable.yml  example_demo_reusable.yml
cram_ros2_packages/json_msgs/: CMakeLists.txt  package.xml
doc/: index.md  index.rst
giskardpy/: executor.py  god_map.py
giskardpy/doc/: _config.yml  _toc.yml  intro.md  motion_statecharts.md  user_guide.md
giskardpy/model/: bpb_wrapper.py  (+5 more)
knowwind/: README.md  pyproject.toml
knowwind/src/knowwind/: __init__.py  datastructures.py  wind_turbine.py
knowwind/src/knowwind/demo/: annotate_wind_farm.py  run_demo.py
knowwind/src/knowwind/ingestion/: __init__.py  readers.py
knowwind/src/knowwind/output/: __init__.py  report.py
knowwind/src/knowwind/pipeline/: __init__.py  annotator.py  csv_importer.py  report.py
knowwind/src/knowwind/semantic/: __init__.py  model.py
knowwind/src/knowwind/semantic_annotations/: __init__.py  base.py  wind_turbine.py
knowwind/src/knowwind/tests/: test_annotations.py
krrood/: requirements.txt
pycram/: requirements.txt
robokudo/: README.md  requirements.txt
semantic_digital_twin/: requirements.txt
test/: conftest.py  montesorri_demo.py  test_contact_events.py  test_cram_segmenter.py  test_csv_episode_segmenter.py  test_csv_replay.py  test_event_detectors.py  test_fame_episode_segmenter.py  test_motion_detectors_nodes.py  test_object_tracker.py  test_spatial_detectors.py  test_statechart.py  test_worlds.py
(+636 files in other folders)
