[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowwind"
version = "0.1.0"
description = "Semantic annotations for wind-turbine SCADA sensor data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["wind-energy", "SCADA", "digital-twin", "semantic-annotations", "anomaly-detection"]

dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["knowwind*"]

[tool.pytest.ini_options]
testpaths = ["knowwind/tests"]
